k8s/overlays/production/frontend-imagepullsecret-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  template:
    spec:
      imagePullSecrets:
        - name: ghcr-secret
